--- a/changes/2014-07-28-follow-and-like-payloads/index.html
+++ b/changes/2014-07-28-follow-and-like-payloads/index.html
@@ -70,6 +70,11 @@ or <a href="/v1/users/likes/#list-shot-likes-for-a-user">liked shot</a> nested.<
         <ol>
           
             <li>
+              <a href="/changes/2014-09-26-attachment-content-type/">Attachment Content Type</a>
+              <span class="date">September 26, 2014</span>
+            </li>
+          
+            <li>
               <a href="/changes/2014-08-21-buckets/">Bucket Endpoints</a>
               <span class="date">August 21, 2014</span>
             </li>
